infra/kubernetes/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: toffolon
  labels:
    app.kubernetes.io/name: toffolon-front
spec:
  selector:
    app: toffolon-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
